--- a/Python Exp .ipynb
+++ b/Python Exp .ipynb
@@ -130,80 +130,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from random import randint\n",
-    "\n",
-    "n = int(input('Enter number of process :'))\n",
-    "process_list = [[i,randint(1,20)] for i in range(n)]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len('pno\\tArival\\tBurst')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time_quantum =3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rr = []\n",
-    "for p in process_list:\n",
-    "    if p[1]-time_quantum <= 0:\n",
-    "        rr.append(p)\n",
-    "        process_list.remove(p[i])\n",
-    "    else:\n",
-    "        rr.append(p[])\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if []:\n",
-    "    print('aa')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'001' in '00101001'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from random import randint\n",
     "\n",
     "# utility function\n",
@@ -292,56 +218,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = []\n",
-    "for i in range(1,11):\n",
-    "    a.append(i*i)\n",
-    "print(a)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[i*i for i in range(1,11)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[i**3 for i in range(1,20) if i%2 != 0 ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[i+2 if i%2 != 0 else i for i in range(10)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = int(input('enter process number :'))\n",
-    "from random import randint\n",
-    "plist = [[i+1,randint(1,25),randint(1,25)] for i in range(n)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from operator import itemgetter\n",
     "plist.sort(key = itemgetter(1,2) )\n",
     "print(plist)"
@@ -349,55 +225,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{1}*2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my name is  hari  welcome home hari\n"
+      "[[0, 6], [1, 4], [2, 5]]\n",
+      "[[0, 3], [1, 3], [2, 3], [0, 3], [2, 2], [1, 1]]\n"
      ]
     }
    ],
    "source": [
-    "name = 'hari'\n",
-    "print('my name is ',name,' welcome home',name)"
+    "from random import randint\n",
+    "\n",
+    "# n = int(input('Enter number of process :'))\n",
+    "# process_list = [[i,randint(1,20)] for i in range(n)]\n",
+    "process_list=[[0,6],[1,4],[2,5]]\n",
+    "time_quantum =3\n",
+    "print(process_list)\n",
+    "rr = []\n",
+    "while process_list:\n",
+    "    for p in process_list:\n",
+    "        if p[1] <= time_quantum:\n",
+    "            rr.append(p)\n",
+    "            process_list.remove(p)\n",
+    "        else:\n",
+    "            rr.append([p[0],time_quantum])\n",
+    "            p[1] -= time_quantum\n",
+    "            process_list.append(process_list.pop())\n",
+    "print(rr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "greeting = f'my name is {name} welcome {name}'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my name is hari welcome hari\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[[0, 3], [1, 3], [2, 3], [0, 3], [2, 2], [1, 1]]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(greeting)"
+    "rr"
    ]
   },
   {
