--- a/python/Python Exp .ipynb
+++ b/python/Python Exp .ipynb
@@ -225,130 +225,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 6], [1, 4], [2, 5]]\n",
-      "[[0, 3], [1, 3], [2, 3], [0, 3], [2, 2], [1, 1]]\n"
+      "661\n"
      ]
     }
    ],
    "source": [
-    "from random import randint\n",
+    "#fcfs disk scheduling\n",
+    "# cp = 55\n",
+    "disk = [55,93,176,42,148,27,14,180]\n",
+    "dist = 0\n",
+    "for i in range(len(disk)-1):\n",
+    "    dist += abs(disk[i]-disk[i+1])\n",
+    "print(dist)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "207\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sjf disk scheduling\n",
+    "def seek_time(i):\n",
+    "    return abs(cp-i)\n",
     "\n",
-    "# n = int(input('Enter number of process :'))\n",
-    "# process_list = [[i,randint(1,20)] for i in range(n)]\n",
-    "process_list=[[0,6],[1,4],[2,5]]\n",
-    "time_quantum =3\n",
-    "print(process_list)\n",
-    "rr = []\n",
-    "while process_list:\n",
-    "    for p in process_list:\n",
-    "        if p[1] <= time_quantum:\n",
-    "            rr.append(p)\n",
-    "            process_list.remove(p)\n",
-    "        else:\n",
-    "            rr.append([p[0],time_quantum])\n",
-    "            p[1] -= time_quantum\n",
-    "            process_list.append(process_list.pop())\n",
-    "print(rr)"
+    "dist = 0\n",
+    "cp = 55\n",
+    "disk = [93,176,42,148,27,14,180]\n",
+    "while disk:    \n",
+    "    new_cp = sorted(disk,key=seek_time)[0]\n",
+    "    dist += abs(cp-new_cp)\n",
+    "    disk.remove(new_cp)\n",
+    "    cp = new_cp\n",
+    "print(dist)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[0, 3], [1, 3], [2, 3], [0, 3], [2, 2], [1, 1]]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Towards large(1) or small(2)2\n",
+      "360\n"
+     ]
     }
    ],
    "source": [
-    "rr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = []\n",
-    "for i in range(1,11):\n",
-    "    a.append(i*i)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[i*i for i in range(1,11)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6, 2, 6, 1, 6, 1, 2, 2, 1, 10]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from random import randint \n",
-    "[randint(1,10) for i in range(10)]"
+    "#c-scan\n",
+    "\n",
+    "disk = [93,176,42,148,27,14,180]\n",
+    "cp = 55\n",
+    "start = 0\n",
+    "end = 199\n",
+    "dist = 0\n",
+    "mode = int(input('Towards large(1) or small(2)'))\n",
+    "if mode == 1: # towards big\n",
+    "    disk.sort()\n",
+    "    for i in range(len(disk)):\n",
+    "        if disk[i] >= cp:\n",
+    "            dist += (abs(cp-disk[i]) + abs(end-disk[i]))\n",
+    "            disk = disk[:i]\n",
+    "            break\n",
+    "    if disk:\n",
+    "        dist += (end - start) + abs(start-disk[0]) + abs(disk[0]-disk[-1])            \n",
+    "else:\n",
+    "    disk.sort(reverse=True)\n",
+    "    for i in range(len(disk)):\n",
+    "        if disk[i] <= cp:\n",
+    "            dist += (abs(cp-disk[i]) + abs(start-disk[i]))\n",
+    "            disk = disk[:i]\n",
+    "            break\n",
+    "    if disk:\n",
+    "        dist += (end - start) + abs(end-disk[0]) + abs(disk[0]-disk[-1])            \n",
+    "\n",
+    "print(dist)    \n"
    ]
   },
   {
