--- a/python/Python Exp .ipynb
+++ b/python/Python Exp .ipynb
@@ -277,15 +277,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Towards large(1) or small(2)2\n",
-      "360\n"
+      "Towards large(1) or small(2)1\n",
+      "385\n"
      ]
     }
    ],
@@ -318,6 +318,26 @@
     "        dist += (end - start) + abs(end-disk[0]) + abs(disk[0]-disk[-1])            \n",
     "\n",
     "print(dist)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[14, 27, 42, 93, 148, 176, 180]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted([93,176,42,148,27,14,180])"
    ]
   },
   {
