disk python test

--- a/python/Python Exp .ipynb
+++ b/python/Python Exp .ipynb
@@ -277,75 +277,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Towards large(1) or small(2)1\n",
-      "385\n"
+      "Towards large(1) or small(2)2\n",
+      "189\n"
      ]
     }
    ],
    "source": [
     "#c-scan\n",
     "\n",
-    "disk = [93,176,42,148,27,14,180]\n",
-    "cp = 55\n",
+    "disk = [176, 79, 34, 60, 92, 11, 41, 114]\n",
+    "cp = 50\n",
     "start = 0\n",
     "end = 199\n",
     "dist = 0\n",
-    "mode = int(input('Towards large(1) or small(2)'))\n",
+    "seq = []\n",
+    "mode = 1\n",
+    "# mode = int(input('Towards large(1) or small(2)'))\n",
     "if mode == 1: # towards big\n",
     "    disk.sort()\n",
     "    for i in range(len(disk)):\n",
     "        if disk[i] >= cp:\n",
     "            dist += (abs(cp-disk[i]) + abs(end-disk[i]))\n",
+    "            seq.extend(disk[i:])\n",
     "            disk = disk[:i]\n",
     "            break\n",
     "    if disk:\n",
-    "        dist += (end - start) + abs(start-disk[0]) + abs(disk[0]-disk[-1])            \n",
-    "else:\n",
+    "        dist += abs(start-disk[0]) + abs(disk[0]-disk[-1])    \n",
+    "        seq.extend(disk)\n",
+    "# else:\n",
+    "#     disk.sort(reverse=True)\n",
+    "#     for i in range(len(disk)):\n",
+    "#         if disk[i] <= cp:\n",
+    "#             dist += (abs(cp-disk[i]) + abs(start-disk[i]))\n",
+    "#             disk = disk[:i]\n",
+    "#             break\n",
+    "#     if disk:\n",
+    "#         dist += abs(end-disk[0]) + abs(disk[0]-disk[-1])            \n",
+    "\n",
+    "# print(dist)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    #scan\n",
+    "    disk = [176, 79, 34, 60, 92, 11, 41, 114]\n",
+    "    cp = 50\n",
+    "    start = 0\n",
+    "    end = 199\n",
+    "    dist = 0\n",
+    "    seq = []\n",
+    "    mode = 1\n",
+    "    # Direction = left (We are moving from right to left)\n",
     "    disk.sort(reverse=True)\n",
     "    for i in range(len(disk)):\n",
     "        if disk[i] <= cp:\n",
     "            dist += (abs(cp-disk[i]) + abs(start-disk[i]))\n",
+    "            seq.extend(disk[i:])\n",
     "            disk = disk[:i]\n",
     "            break\n",
     "    if disk:\n",
-    "        dist += (end - start) + abs(end-disk[0]) + abs(disk[0]-disk[-1])            \n",
-    "\n",
-    "print(dist)    \n"
+    "        seq.append(0)\n",
+    "        dist += abs(start-disk[i-1]) + abs(disk[i-1] - disk[0])  \n",
+    "        disk.reverse()\n",
+    "        seq.extend(disk)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[14, 27, 42, 93, 148, 176, 180]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sorted([93,176,42,148,27,14,180])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
