--- a/python/Python Exp .ipynb
+++ b/python/Python Exp .ipynb
@@ -277,18 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Towards large(1) or small(2)2\n",
-      "189\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#c-scan\n",
     "\n",
@@ -304,12 +295,13 @@
     "    disk.sort()\n",
     "    for i in range(len(disk)):\n",
     "        if disk[i] >= cp:\n",
-    "            dist += (abs(cp-disk[i]) + abs(end-disk[i]))\n",
+    "            dist += (abs(cp-disk[i]) + abs(disk[-1]-disk[i]))\n",
+    "            temp = disk[-1]\n",
     "            seq.extend(disk[i:])\n",
     "            disk = disk[:i]\n",
     "            break\n",
     "    if disk:\n",
-    "        dist += abs(start-disk[0]) + abs(disk[0]-disk[-1])    \n",
+    "        dist += abs(end-temp) + abs(start-disk[0]) + abs(disk[0]-disk[-1])    \n",
     "        seq.extend(disk)\n",
     "# else:\n",
     "#     disk.sort(reverse=True)\n",
@@ -326,7 +318,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "190"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,16 +354,64 @@
     "    disk.sort(reverse=True)\n",
     "    for i in range(len(disk)):\n",
     "        if disk[i] <= cp:\n",
-    "            dist += (abs(cp-disk[i]) + abs(start-disk[i]))\n",
+    "            dist += (abs(cp-disk[i]) + abs(disk[-1]-disk[i]))\n",
+    "            temp = disk[-1]\n",
     "            seq.extend(disk[i:])\n",
     "            disk = disk[:i]\n",
     "            break\n",
     "    if disk:\n",
     "        seq.append(0)\n",
-    "        dist += abs(start-disk[i-1]) + abs(disk[i-1] - disk[0])  \n",
+    "        dist += abs(start-temp)+abs(start-disk[i-1]) + abs(disk[i-1] - disk[0])  \n",
     "        disk.reverse()\n",
     "        seq.extend(disk)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[41, 34, 11, 0, 60, 79, 92, 114, 176]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "226"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
