--- a/python/sic_xe/pass1.ipynb
+++ b/python/sic_xe/pass1.ipynb
@@ -44,18 +44,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def to_file(file,table):\n",
-    "    with open(file, 'w') as f:\n",
-    "        for item in table:\n",
-    "            f.write(\"%s\\n\" % item)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -72,13 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "locctr = 0\n",
     "temp = []\n",
     "symtab = {}\n",
+    "littab = {}\n",
     "sym  = open('symtab.txt','w')\n",
     "temp = open('temp.txt','w')\n",
     "\n",
@@ -87,12 +76,11 @@
     "    if 'START' in line:\n",
     "        locctr = int(line[-1],16)\n",
     "        start_addr = locctr\n",
-    "        temp.write(f'{line[0]} {line[1]} {hex(locctr)[2:].zfill(5)}')\n",
+    "        temp.write(f'{line[0]} {line[1]} {hex(locctr)[2:].zfill(5)}\\n')\n",
     "        line = split_(f.readline())\n",
     "    else:\n",
     "        locctr=start_addr=0\n",
     "    while line:\n",
-    "        line = split_(f.readline())\n",
     "        if '.' not in line:\n",
     "            if line[0] != '-':\n",
     "                if line[0] in symtab:\n",
@@ -100,16 +88,19 @@
     "                else:\n",
     "                    symtab[line[0]] = locctr\n",
     "                    sym.write(f'{line[0]} {hex(locctr)[2:].zfill(5)}\\n')\n",
-    "            if line[1] in optab:\n",
-    "                if optab[line[1]]['len'] == 1:\n",
+    "            temp.write(f'{hex(locctr)[2:].zfill(5)} {line[1]} {line[2]}\\n')\n",
+    "            if '=' in line[2]:\n",
+    "                if line[2] not in littab:\n",
+    "                    littab[line[2]] = '-'\n",
+    "            if line[1] in optab or line[1][1:] in optab:\n",
+    "                if '+' in line[1]:\n",
+    "                        locctr += 4\n",
+    "                elif optab[line[1]]['len'] == 1:\n",
     "                    locctr += 1\n",
     "                elif optab[line[1]]['len'] == 2:\n",
     "                    locctr += 2\n",
     "                else:\n",
-    "                    if '+' in line[1]:\n",
-    "                        locctr += 4\n",
-    "                    else:\n",
-    "                        locctr += 3\n",
+    "                    locctr += 3\n",
     "            elif line[1] == 'WORD':\n",
     "                locctr += 3\n",
     "            elif line[1] == 'BYTE':\n",
@@ -124,18 +115,12 @@
     "            elif line[1] == 'END':\n",
     "                temp.write(f'{hex(locctr)[2:].zfill(5)} {line[1]} {start_addr}\\n')\n",
     "                break\n",
-    "            temp.write(f'{hex(locctr)[2:].zfill(5)} {line[1]} {line[2]}\\n')\n",
+    "        line = split_(f.readline())\n",
+    "\n",
     "prg_len = hex(locctr-start_addr)[2:].zfill(5)\n",
     "temp.close()\n",
     "sym.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
