--- a/python/sic_xe/pass1.ipynb
+++ b/python/sic_xe/pass1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,6 +120,84 @@
     "prg_len = hex(locctr-start_addr)[2:].zfill(5)\n",
     "temp.close()\n",
     "sym.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ADD': {'len': 3, 'hex': '18'},\n",
+       " 'ADDF': {'len': 3, 'hex': '58'},\n",
+       " 'ADDR': {'len': 2, 'hex': '90'},\n",
+       " 'AND': {'len': 3, 'hex': '40'},\n",
+       " 'CLEAR': {'len': 2, 'hex': 'B4'},\n",
+       " 'COMP': {'len': 3, 'hex': '28'},\n",
+       " 'COMPF': {'len': 3, 'hex': '88'},\n",
+       " 'COMPR': {'len': 2, 'hex': 'A0'},\n",
+       " 'DIV': {'len': 3, 'hex': '24'},\n",
+       " 'DIVF': {'len': 3, 'hex': '64'},\n",
+       " 'DIVR': {'len': 2, 'hex': '9C'},\n",
+       " 'FIX': {'len': 1, 'hex': 'C4'},\n",
+       " 'FLOAT': {'len': 1, 'hex': 'C0'},\n",
+       " 'HIO': {'len': 1, 'hex': 'F4'},\n",
+       " 'J': {'len': 3, 'hex': '3C'},\n",
+       " 'JEQ': {'len': 3, 'hex': '30'},\n",
+       " 'JGT': {'len': 3, 'hex': '34'},\n",
+       " 'JLT': {'len': 3, 'hex': '38'},\n",
+       " 'JSUB': {'len': 3, 'hex': '48'},\n",
+       " 'LDA': {'len': 3, 'hex': '00'},\n",
+       " 'LDB': {'len': 3, 'hex': '68'},\n",
+       " 'LDCH': {'len': 3, 'hex': '50'},\n",
+       " 'LDF': {'len': 3, 'hex': '70'},\n",
+       " 'LDL': {'len': 3, 'hex': '08'},\n",
+       " 'LDS': {'len': 3, 'hex': '6C'},\n",
+       " 'LDT': {'len': 3, 'hex': '74'},\n",
+       " 'LDX': {'len': 3, 'hex': '04'},\n",
+       " 'LPS': {'len': 3, 'hex': 'D0'},\n",
+       " 'MUL': {'len': 3, 'hex': '20'},\n",
+       " 'MULF': {'len': 3, 'hex': '60'},\n",
+       " 'MULR': {'len': 2, 'hex': '98'},\n",
+       " 'NORM': {'len': 1, 'hex': 'C8'},\n",
+       " 'OR': {'len': 3, 'hex': '44'},\n",
+       " 'RD': {'len': 3, 'hex': 'D8'},\n",
+       " 'RMO': {'len': 2, 'hex': 'AC'},\n",
+       " 'RSUB': {'len': 3, 'hex': '4C'},\n",
+       " 'SHIFTL': {'len': 2, 'hex': 'A4'},\n",
+       " 'SHIFTR': {'len': 2, 'hex': 'A8'},\n",
+       " 'SIO': {'len': 1, 'hex': 'F0'},\n",
+       " 'SSK': {'len': 3, 'hex': 'EC'},\n",
+       " 'STA': {'len': 3, 'hex': '0C'},\n",
+       " 'STB': {'len': 3, 'hex': '78'},\n",
+       " 'STCH': {'len': 3, 'hex': '54'},\n",
+       " 'STF': {'len': 3, 'hex': '80'},\n",
+       " 'STI': {'len': 3, 'hex': 'D4'},\n",
+       " 'STL': {'len': 3, 'hex': '14'},\n",
+       " 'STS': {'len': 3, 'hex': '7C'},\n",
+       " 'STSW': {'len': 3, 'hex': 'E8'},\n",
+       " 'STT': {'len': 3, 'hex': '84'},\n",
+       " 'STX': {'len': 3, 'hex': '10'},\n",
+       " 'SUB': {'len': 3, 'hex': '1C'},\n",
+       " 'SUBF': {'len': 3, 'hex': '5C'},\n",
+       " 'SUBR': {'len': 2, 'hex': '94'},\n",
+       " 'SVC': {'len': 2, 'hex': 'B0'},\n",
+       " 'TD': {'len': 3, 'hex': 'E0'},\n",
+       " 'TIO': {'len': 1, 'hex': 'F8'},\n",
+       " 'TIX': {'len': 3, 'hex': '2C'},\n",
+       " 'TIXR': {'len': 2, 'hex': 'B8'},\n",
+       " 'WD': {'len': 3, 'hex': 'DC'}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optab"
    ]
   },
   {
