--- a/python/sic_xe/pass 2.ipynb
+++ b/python/sic_xe/pass 2.ipynb
@@ -114,6 +114,8 @@
     "                pc =+ 2\n",
     "                if ',' in opr:\n",
     "                    print(f\"{optab[op]['hex']}{regtab[opr[0]]}{regtab[opr[-1]]}\")\n",
+    "                else:\n",
+    "                    print(f\"{optab[op]['hex']}{regtab[opr[0]]}0\")\n",
     "            elif optab[op]['len'] == 3:\n",
     "                pc += 3\n",
     "                if ',' in opr:      #index mode\n",
@@ -177,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
