--- a/python/sic_xe/pass1.ipynb
+++ b/python/sic_xe/pass1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +53,90 @@
     "op = [split_(i) for i in op]\n",
     "op = [ [i[0],i[2],i[3]] for i in op]\n",
     "\n",
-    "optab = {}\n",
+    "\n",
+    "optab = open('optab.dat','w')\n",
     "for i in op:\n",
-    "    optab[i[0]] = {'len':int(i[1]),'hex':i[2]}"
+    "#     optab[i[0]] = {'len':int(i[1]),'hex':i[2]}\n",
+    "    optab.write(i[0]+' '+ i[1]+' ' +i[2]+'\\n')\n",
+    "optab.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['18',\n",
+       " '58',\n",
+       " '90',\n",
+       " '40',\n",
+       " 'B4',\n",
+       " '28',\n",
+       " '88',\n",
+       " 'A0',\n",
+       " '24',\n",
+       " '64',\n",
+       " '9C',\n",
+       " 'C4',\n",
+       " 'C0',\n",
+       " 'F4',\n",
+       " '3C',\n",
+       " '30',\n",
+       " '34',\n",
+       " '38',\n",
+       " '48',\n",
+       " '00',\n",
+       " '68',\n",
+       " '50',\n",
+       " '70',\n",
+       " '08',\n",
+       " '6C',\n",
+       " '74',\n",
+       " '04',\n",
+       " 'D0',\n",
+       " '20',\n",
+       " '60',\n",
+       " '98',\n",
+       " 'C8',\n",
+       " '44',\n",
+       " 'D8',\n",
+       " 'AC',\n",
+       " '4C',\n",
+       " 'A4',\n",
+       " 'A8',\n",
+       " 'F0',\n",
+       " 'EC',\n",
+       " '0C',\n",
+       " '78',\n",
+       " '54',\n",
+       " '80',\n",
+       " 'D4',\n",
+       " '14',\n",
+       " '7C',\n",
+       " 'E8',\n",
+       " '84',\n",
+       " '10',\n",
+       " '1C',\n",
+       " '5C',\n",
+       " '94',\n",
+       " 'B0',\n",
+       " 'E0',\n",
+       " 'F8',\n",
+       " '2C',\n",
+       " 'B8',\n",
+       " 'DC']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i[2]for i in op]"
    ]
   },
   {
@@ -124,74 +205,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ADD': {'len': 3, 'hex': '18'},\n",
-       " 'ADDF': {'len': 3, 'hex': '58'},\n",
-       " 'ADDR': {'len': 2, 'hex': '90'},\n",
-       " 'AND': {'len': 3, 'hex': '40'},\n",
-       " 'CLEAR': {'len': 2, 'hex': 'B4'},\n",
-       " 'COMP': {'len': 3, 'hex': '28'},\n",
-       " 'COMPF': {'len': 3, 'hex': '88'},\n",
-       " 'COMPR': {'len': 2, 'hex': 'A0'},\n",
-       " 'DIV': {'len': 3, 'hex': '24'},\n",
-       " 'DIVF': {'len': 3, 'hex': '64'},\n",
-       " 'DIVR': {'len': 2, 'hex': '9C'},\n",
-       " 'FIX': {'len': 1, 'hex': 'C4'},\n",
-       " 'FLOAT': {'len': 1, 'hex': 'C0'},\n",
-       " 'HIO': {'len': 1, 'hex': 'F4'},\n",
-       " 'J': {'len': 3, 'hex': '3C'},\n",
-       " 'JEQ': {'len': 3, 'hex': '30'},\n",
-       " 'JGT': {'len': 3, 'hex': '34'},\n",
-       " 'JLT': {'len': 3, 'hex': '38'},\n",
-       " 'JSUB': {'len': 3, 'hex': '48'},\n",
-       " 'LDA': {'len': 3, 'hex': '00'},\n",
-       " 'LDB': {'len': 3, 'hex': '68'},\n",
-       " 'LDCH': {'len': 3, 'hex': '50'},\n",
-       " 'LDF': {'len': 3, 'hex': '70'},\n",
-       " 'LDL': {'len': 3, 'hex': '08'},\n",
-       " 'LDS': {'len': 3, 'hex': '6C'},\n",
-       " 'LDT': {'len': 3, 'hex': '74'},\n",
-       " 'LDX': {'len': 3, 'hex': '04'},\n",
-       " 'LPS': {'len': 3, 'hex': 'D0'},\n",
-       " 'MUL': {'len': 3, 'hex': '20'},\n",
-       " 'MULF': {'len': 3, 'hex': '60'},\n",
-       " 'MULR': {'len': 2, 'hex': '98'},\n",
-       " 'NORM': {'len': 1, 'hex': 'C8'},\n",
-       " 'OR': {'len': 3, 'hex': '44'},\n",
-       " 'RD': {'len': 3, 'hex': 'D8'},\n",
-       " 'RMO': {'len': 2, 'hex': 'AC'},\n",
-       " 'RSUB': {'len': 3, 'hex': '4C'},\n",
-       " 'SHIFTL': {'len': 2, 'hex': 'A4'},\n",
-       " 'SHIFTR': {'len': 2, 'hex': 'A8'},\n",
-       " 'SIO': {'len': 1, 'hex': 'F0'},\n",
-       " 'SSK': {'len': 3, 'hex': 'EC'},\n",
-       " 'STA': {'len': 3, 'hex': '0C'},\n",
-       " 'STB': {'len': 3, 'hex': '78'},\n",
-       " 'STCH': {'len': 3, 'hex': '54'},\n",
-       " 'STF': {'len': 3, 'hex': '80'},\n",
-       " 'STI': {'len': 3, 'hex': 'D4'},\n",
-       " 'STL': {'len': 3, 'hex': '14'},\n",
-       " 'STS': {'len': 3, 'hex': '7C'},\n",
-       " 'STSW': {'len': 3, 'hex': 'E8'},\n",
-       " 'STT': {'len': 3, 'hex': '84'},\n",
-       " 'STX': {'len': 3, 'hex': '10'},\n",
-       " 'SUB': {'len': 3, 'hex': '1C'},\n",
-       " 'SUBF': {'len': 3, 'hex': '5C'},\n",
-       " 'SUBR': {'len': 2, 'hex': '94'},\n",
-       " 'SVC': {'len': 2, 'hex': 'B0'},\n",
-       " 'TD': {'len': 3, 'hex': 'E0'},\n",
-       " 'TIO': {'len': 1, 'hex': 'F8'},\n",
-       " 'TIX': {'len': 3, 'hex': '2C'},\n",
-       " 'TIXR': {'len': 2, 'hex': 'B8'},\n",
-       " 'WD': {'len': 3, 'hex': 'DC'}}"
+       "{'ADD': {'hex': '18', 'len': 3},\n",
+       " 'ADDF': {'hex': '58', 'len': 3},\n",
+       " 'ADDR': {'hex': '90', 'len': 2},\n",
+       " 'AND': {'hex': '40', 'len': 3},\n",
+       " 'CLEAR': {'hex': 'B4', 'len': 2},\n",
+       " 'COMP': {'hex': '28', 'len': 3},\n",
+       " 'COMPF': {'hex': '88', 'len': 3},\n",
+       " 'COMPR': {'hex': 'A0', 'len': 2},\n",
+       " 'DIV': {'hex': '24', 'len': 3},\n",
+       " 'DIVF': {'hex': '64', 'len': 3},\n",
+       " 'DIVR': {'hex': '9C', 'len': 2},\n",
+       " 'FIX': {'hex': 'C4', 'len': 1},\n",
+       " 'FLOAT': {'hex': 'C0', 'len': 1},\n",
+       " 'HIO': {'hex': 'F4', 'len': 1},\n",
+       " 'J': {'hex': '3C', 'len': 3},\n",
+       " 'JEQ': {'hex': '30', 'len': 3},\n",
+       " 'JGT': {'hex': '34', 'len': 3},\n",
+       " 'JLT': {'hex': '38', 'len': 3},\n",
+       " 'JSUB': {'hex': '48', 'len': 3},\n",
+       " 'LDA': {'hex': '00', 'len': 3},\n",
+       " 'LDB': {'hex': '68', 'len': 3},\n",
+       " 'LDCH': {'hex': '50', 'len': 3},\n",
+       " 'LDF': {'hex': '70', 'len': 3},\n",
+       " 'LDL': {'hex': '08', 'len': 3},\n",
+       " 'LDS': {'hex': '6C', 'len': 3},\n",
+       " 'LDT': {'hex': '74', 'len': 3},\n",
+       " 'LDX': {'hex': '04', 'len': 3},\n",
+       " 'LPS': {'hex': 'D0', 'len': 3},\n",
+       " 'MUL': {'hex': '20', 'len': 3},\n",
+       " 'MULF': {'hex': '60', 'len': 3},\n",
+       " 'MULR': {'hex': '98', 'len': 2},\n",
+       " 'NORM': {'hex': 'C8', 'len': 1},\n",
+       " 'OR': {'hex': '44', 'len': 3},\n",
+       " 'RD': {'hex': 'D8', 'len': 3},\n",
+       " 'RMO': {'hex': 'AC', 'len': 2},\n",
+       " 'RSUB': {'hex': '4C', 'len': 3},\n",
+       " 'SHIFTL': {'hex': 'A4', 'len': 2},\n",
+       " 'SHIFTR': {'hex': 'A8', 'len': 2},\n",
+       " 'SIO': {'hex': 'F0', 'len': 1},\n",
+       " 'SSK': {'hex': 'EC', 'len': 3},\n",
+       " 'STA': {'hex': '0C', 'len': 3},\n",
+       " 'STB': {'hex': '78', 'len': 3},\n",
+       " 'STCH': {'hex': '54', 'len': 3},\n",
+       " 'STF': {'hex': '80', 'len': 3},\n",
+       " 'STI': {'hex': 'D4', 'len': 3},\n",
+       " 'STL': {'hex': '14', 'len': 3},\n",
+       " 'STS': {'hex': '7C', 'len': 3},\n",
+       " 'STSW': {'hex': 'E8', 'len': 3},\n",
+       " 'STT': {'hex': '84', 'len': 3},\n",
+       " 'STX': {'hex': '10', 'len': 3},\n",
+       " 'SUB': {'hex': '1C', 'len': 3},\n",
+       " 'SUBF': {'hex': '5C', 'len': 3},\n",
+       " 'SUBR': {'hex': '94', 'len': 2},\n",
+       " 'SVC': {'hex': 'B0', 'len': 2},\n",
+       " 'TD': {'hex': 'E0', 'len': 3},\n",
+       " 'TIO': {'hex': 'F8', 'len': 1},\n",
+       " 'TIX': {'hex': '2C', 'len': 3},\n",
+       " 'TIXR': {'hex': 'B8', 'len': 2},\n",
+       " 'WD': {'hex': 'DC', 'len': 3}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
